PR11282: Keep the md4 state in the hash copy constructor

We were getting new hash collisions, because the new hash copy
constructor was restarting the md4 computation.  Everything from
get_base_hash was thus lost.

* hash.h (hash::hash): Keep the md4 state when copying.